--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1020,43 +1020,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selecione o número da ação desejada:\n",
+      "Selecione o número da operação desejada:\n",
       "\n",
       "1 - Soma\n",
       "2 - Subtração\n",
       "3 - Multiplicação\n",
       "4 - Divisão\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'primeiro' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[100], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m operacao \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite sua opção (1/2/3/4): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moperacao\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m---> 11\u001b[0m primeiro \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite o primeiro número: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mprimeiro\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m     13\u001b[0m segundo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite o segundo número: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msegundo\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'primeiro' is not defined"
+      "\n",
+      "Digite sua opção (1/2/3/4): 5\n",
+      "\n",
+      "Opção inválida! Digite novamente\n",
+      "\n",
+      "Digite sua opção (1/2/3/4): 6\n",
+      "\n",
+      "Opção inválida! Digite novamente\n",
+      "\n",
+      "Digite sua opção (1/2/3/4): 3\n",
+      "\n",
+      "Digite o primeiro número: 2.0\n",
+      "\n",
+      "Digite o segundo número: 4.0\n",
+      "\n",
+      "2.0 * 4.0 = 8.0\n"
      ]
     }
    ],
    "source": [
-    "print('Selecione o número da ação desejada:')\n",
+    "print('Selecione o número da operação desejada:')\n",
     "print()\n",
     "print('1 - Soma')\n",
     "print('2 - Subtração')\n",
@@ -1064,17 +1061,36 @@
     "print('4 - Divisão')\n",
     "print()\n",
     "\n",
-    "operacao = int(input(f'Digite sua opção (1/2/3/4): {operacao}'))\n",
-    "print()\n",
-    "primeiro = float(input(f'Digite o primeiro número: {primeiro}'))\n",
-    "print()\n",
-    "segundo = float(input(f'Digite o segundo número: {segundo}'))\n",
+    "\n",
+    "operacao = int(input(f'Digite sua opção (1/2/3/4): '))\n",
+    "print(f'Digite sua opção (1/2/3/4): {operacao}')\n",
     "print()\n",
     "\n",
-    "def calculadora(primeiro, segundo):\n",
-    "    if operacao == 1:\n",
-    "        soma = primeiro + segundo\n",
-    "        print(f'{primeiro}+{segundo}={soma}')\n",
+    "while operacao < 1 or operacao > 4:\n",
+    "    print(f'Opção inválida! Digite novamente')\n",
+    "    print()\n",
+    "    operacao = int(input(f'Digite sua opção (1/2/3/4): '))\n",
+    "    print(f'Digite sua opção (1/2/3/4): {operacao}')\n",
+    "    print()\n",
+    "primeiro = float(input(f'Digite o primeiro número: '))\n",
+    "print(f'Digite o primeiro número: {primeiro}')\n",
+    "print()\n",
+    "segundo = float(input(f'Digite o segundo número: '))\n",
+    "print(f'Digite o segundo número: {segundo}')\n",
+    "print()\n",
+    "\n",
+    "if operacao == 1:\n",
+    "    soma = primeiro + segundo\n",
+    "    print(f'{primeiro} + {segundo} = {soma}')\n",
+    "elif operacao == 2:\n",
+    "    subtracao = primeiro - segundo\n",
+    "    print(f'{primeiro} - {segundo} = {subtracao}')\n",
+    "elif operacao == 3:\n",
+    "    multiplicacao = primeiro * segundo\n",
+    "    print(f'{primeiro} * {segundo} = {multiplicacao}')\n",
+    "elif operacao == 4:\n",
+    "    divisao = primeiro / segundo\n",
+    "    print(f'{primeiro} / {segundo} = {divisao}')\n",
     "\n"
    ]
   }
