--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -877,14 +877,9 @@
     "# Dict comprehension para saber se o aluno foi aprovado\n",
     "dict_alunos_status = {k: ('Aprovado' if v > 70 else 'Reprovado') for (k,v) in dict_alunos.items()}\n",
     "print(dict_alunos_status) \n",
-    "#TESTE\n",
+    "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -900,7 +895,46 @@
     }
    ],
    "source": [
-    "print(f'Olá')\n"
+    "# Exercício Calculadora\n",
+    "\n",
+    "print('Selecione o número da operação desejada:')\n",
+    "print()\n",
+    "print('1 - Soma')\n",
+    "print('2 - Subtração')\n",
+    "print('3 - Multiplicação')\n",
+    "print('4 - Divisão')\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "operacao = int(input(f'Digite sua opção (1/2/3/4): '))\n",
+    "print(f'Digite sua opção (1/2/3/4): {operacao}')\n",
+    "print()\n",
+    "\n",
+    "while operacao < 1 or operacao > 4:\n",
+    "    print(f'Opção inválida! Digite novamente')\n",
+    "    print()\n",
+    "    operacao = int(input(f'Digite sua opção (1/2/3/4): '))\n",
+    "    print(f'Digite sua opção (1/2/3/4): {operacao}')\n",
+    "    print()\n",
+    "primeiro = float(input(f'Digite o primeiro número: '))\n",
+    "print(f'Digite o primeiro número: {primeiro}')\n",
+    "print()\n",
+    "segundo = float(input(f'Digite o segundo número: '))\n",
+    "print(f'Digite o segundo número: {segundo}')\n",
+    "print()\n",
+    "\n",
+    "if operacao == 1:\n",
+    "    soma = primeiro + segundo\n",
+    "    print(f'{primeiro} + {segundo} = {soma}')\n",
+    "elif operacao == 2:\n",
+    "    subtracao = primeiro - segundo\n",
+    "    print(f'{primeiro} - {segundo} = {subtracao}')\n",
+    "elif operacao == 3:\n",
+    "    multiplicacao = primeiro * segundo\n",
+    "    print(f'{primeiro} * {segundo} = {multiplicacao}')\n",
+    "elif operacao == 4:\n",
+    "    divisao = primeiro / segundo\n",
+    "    print(f'{primeiro} / {segundo} = {divisao}')"
    ]
   }
  ],
