--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -890,13 +890,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Olá\n"
+      "Selecione o número da operação desejada:\n",
+      "\n",
+      "1 - Soma\n",
+      "2 - Subtração\n",
+      "3 - Multiplicação\n",
+      "4 - Divisão\n",
+      "\n",
+      "Digite sua opção (1/2/3/4): 4\n",
+      "\n",
+      "Digite o primeiro número: 3.0\n",
+      "\n",
+      "Digite o segundo número: 4.0\n",
+      "\n",
+      "3.0 / 4.0 = 0.75\n"
      ]
     }
    ],
    "source": [
     "# Exercício Calculadora\n",
-    "\n",
     "print('Selecione o número da operação desejada:')\n",
     "print()\n",
     "print('1 - Soma')\n",
