--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -948,6 +948,51 @@
     "    divisao = primeiro / segundo\n",
     "    print(f'{primeiro} / {segundo} = {divisao}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selecione o número da operação desejada:\n",
+      "\n",
+      "1 - Soma\n",
+      "2 - Subtração\n",
+      "3 - Multiplicação\n",
+      "4 - Divisão\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício Calculadora\n",
+    "print('Selecione o número da operação desejada:')\n",
+    "print()\n",
+    "print('1 - Soma')\n",
+    "print('2 - Subtração')\n",
+    "print('3 - Multiplicação')\n",
+    "print('4 - Divisão')\n",
+    "print()\n",
+    "\n",
+    "operacao = int(input(f'Digite sua opção (1/2/3/4):')) \n",
+    "\n",
+    "def calculadora(primeiro, segundo):\n",
+    "   if operacao == 1:\n",
+    "      resultado = primeiro + segundo\n",
+    "   elif operacao == 2:\n",
+    "      resultado = primeiro - segundo\n",
+    "   elif operacao == 3:\n",
+    "      resultado = primeiro * segundo\n",
+    "   elif operacao == 4:\n",
+    "      resultado = primeiro / segundo\n",
+    "\n",
+    "calculadora(2,5)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
