--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1093,6 +1093,26 @@
     "    print(f'{primeiro} / {segundo} = {divisao}')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome_1 = 45\n",
+    "nome_2 = 45\n",
+    "\n",
+    "print(nome_1 + nome_2 + 10)"
+   ]
   }
  ],
  "metadata": {
