--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -908,7 +908,8 @@
     }
    ],
    "source": [
-    "# Exercício Calculadora\n",
+    "print(\"Python Calculator\")\n",
+    "print()\n",
     "print('Selecione o número da operação desejada:')\n",
     "print()\n",
     "print('1 - Soma')\n",
@@ -969,6 +970,22 @@
     }
    ],
    "source": [
+    "print(\"Python Calculator\")\n",
+    "print()\n",
+    "\n",
+    "def add(x, y):\n",
+    "   return x + y\n",
+    "\n",
+    "def subtract(x, y):\n",
+    "   return x - y\n",
+    "\n",
+    "def multiply(x, y):\n",
+    "   return x * y\n",
+    "\n",
+    "def divide(x, y):\n",
+    "   return x / y\n",
+    "\n",
+    "\n",
     "# Exercício Calculadora\n",
     "print('Selecione o número da operação desejada:')\n",
     "print()\n",
@@ -980,10 +997,6 @@
     "\n",
     "operacao = int(input(f'Digite sua opção (1/2/3/4):')) \n",
     "\n",
-    "def calculadora(primeiro, segundo):\n",
-    "   if operacao == 1:\n",
-    "      resultado = primeiro + segundo\n",
-    "   elif operacao == 2:\n",
     "      resultado = primeiro - segundo\n",
     "   elif operacao == 3:\n",
     "      resultado = primeiro * segundo\n",
