--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -1004,6 +1004,7 @@
     "      resultado = primeiro / segundo\n",
     "\n",
     "calculadora(2,5)\n",
+    "print()\n",
     "\n",
     "\n"
    ]
