--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -364,8 +364,11 @@
       "2\n",
       "\n",
       "['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
-      "['São Paulo', 'Guarulhos', 'Santo André', 'São Bernardo', 'São Caetano']\n",
-      "['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Mauá', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Mauá', 'São Bernardo', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Mauá', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Mauá']\n",
+      "['São Paulo', 'Mauá']\n",
       "\n",
       "['Volkswagen', 'Honda', 'Citroen', 'Hyundai', 'Ford', 'Chevrolet']\n",
       "['Chevrolet', 'Citroen', 'Ford', 'Honda', 'Hyundai', 'Volkswagen']\n",
@@ -417,10 +420,18 @@
     "# Adicionar e remover itens da Lista\n",
     "listaMunicipios = ['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
     "print(listaMunicipios)\n",
-    "listaMunicipios.insert(3, 'São Bernardo')\n",
+    "listaMunicipios[2] = \"Mauá\" #substituir um elemento em uma lista\n",
+    "print(listaMunicipios)\n",
+    "listaMunicipios.insert(3, 'São Bernardo') #adicionar em uma posição\n",
     "print(listaMunicipios)\n",
     "listaMunicipios.remove('São Bernardo')\n",
     "print(listaMunicipios)\n",
+    "listaMunicipios.pop() #remove o último elemento da lista\n",
+    "print(listaMunicipios)\n",
+    "listaMunicipios.pop(1) #remove o elemento escolhido\n",
+    "removido = listaMunicipios.pop(1) #armazeno o item removido em uma variável\n",
+    "print(listaMunicipios)\n",
+    "print(removido)\n",
     "print()\n",
     "\n",
     "# Inverter e ordenar os itens da lista\n",
