--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -994,6 +994,7 @@
     "print('3 - Multiplicação')\n",
     "print('4 - Divisão')\n",
     "print()\n",
+    "print()\n",
     "\n",
     "operacao = int(input(f'Digite sua opção (1/2/3/4):')) \n",
     "\n",
