--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -952,20 +952,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selecione o número da operação desejada:\n",
-      "\n",
-      "1 - Soma\n",
-      "2 - Subtração\n",
-      "3 - Multiplicação\n",
-      "4 - Divisão\n",
-      "\n"
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m<tokenize>:30\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif operacao == 3:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
@@ -1004,8 +999,8 @@
     "   elif operacao == 4:\n",
     "      resultado = primeiro / segundo\n",
     "\n",
-    "calculadora(2,5)\n",
-    "print()\n",
+    "add(2,5)\n",
+    "print(add)\n",
     "print()  \n",
     "\n"
    ]
