--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Você pode acessar as redes sociais sem supervisão!\n",
+      "Você não pode acessar as redes sociais sem supervisão!\n",
       "\n",
       "Este número não é primo\n",
       "Este número é primo\n",
@@ -709,13 +709,17 @@
       "O\n",
       "S\n",
       "None\n",
+      "\n",
       "16\n",
       "9\n",
       "4\n",
       "27\n",
       "P\n",
       "nohtyP\n",
-      "5\n"
+      "5\n",
+      "New price: 2.5\n",
+      "New price: 10.0\n",
+      "New price: 4.0\n"
      ]
     }
    ],
@@ -809,6 +813,14 @@
     "\n",
     "addNum = lambda x,y: x + y\n",
     "print(addNum(2,3))\n",
+    "\n",
+    "# Definindo funções com listas\n",
+    "def halve_prices(cart):\n",
+    "    for price in cart:\n",
+    "        print(f\"New price: {price/2}\")\n",
+    "\n",
+    "cart_list = [5, 20, 8]\n",
+    "halve_prices(cart_list)        \n",
     "\n"
    ]
   },
@@ -1001,9 +1013,7 @@
     "\n",
     "add(2,5)\n",
     "print(add)\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
+    "\n",
     "\n",
     "\n",
     "\n"
