--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -625,13 +625,7 @@
       "3\n",
       "1\n",
       "158\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Você não pode acessar as redes sociais sem supervisão!\n",
       "\n",
       "Este número não é primo\n",
@@ -717,6 +711,10 @@
       "P\n",
       "nohtyP\n",
       "5\n",
+      "Downloading file 0 out of 4\n",
+      "Downloading file 1 out of 4\n",
+      "Downloading file 2 out of 4\n",
+      "Downloading file 3 out of 4\n",
       "New price: 2.5\n",
       "New price: 10.0\n",
       "New price: 4.0\n"
@@ -787,7 +785,52 @@
     "\n",
     "print(split_string_letras(texto))\n",
     "print()\n",
-    "\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções Parte 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "9\n",
+      "4\n",
+      "\n",
+      "27\n",
+      "P\n",
+      "nohtyP\n",
+      "5\n",
+      "\n",
+      "passenger 1 on board\n",
+      "passenger 2 on board\n",
+      "passenger 3 on board\n",
+      "passenger 4 on board\n",
+      "\n",
+      "Downloading file 0 out of 4\n",
+      "Downloading file 1 out of 4\n",
+      "Downloading file 2 out of 4\n",
+      "Downloading file 3 out of 4\n",
+      "\n",
+      "New price: 2.5\n",
+      "New price: 10.0\n",
+      "New price: 4.0\n"
+     ]
+    }
+   ],
+   "source": [
     "# Definindo uma função\n",
     "def potencia(num):\n",
     "    resultado = num ** 2\n",
@@ -800,6 +843,8 @@
     "\n",
     "def potencia(num): return num ** 2\n",
     "print(potencia(2))\n",
+    "\n",
+    "print()\n",
     "\n",
     "# Definindo uma função lambda (função anônima)\n",
     "potencia = lambda num: num ** 3\n",
@@ -814,14 +859,33 @@
     "addNum = lambda x,y: x + y\n",
     "print(addNum(2,3))\n",
     "\n",
+    "print()\n",
+    "\n",
+    "# Definindo funções com loop while\n",
+    "def onboard_passengers(bookings):\n",
+    "    counter = 1\n",
+    "    while counter <= bookings:\n",
+    "        print(f\"passenger {counter} on board\")\n",
+    "        counter += 1\n",
+    "\n",
+    "onboard_passengers(4)        \n",
+    "print()\n",
+    "\n",
+    "# Definindo funções com loop for\n",
+    "def display_progress(total_files):\n",
+    "    for i in range(total_files):\n",
+    "        print(f\"Downloading file {i} out of {total_files}\")\n",
+    "\n",
+    "display_progress(4)        \n",
+    "print()\n",
+    "\n",
     "# Definindo funções com listas\n",
     "def halve_prices(cart):\n",
     "    for price in cart:\n",
     "        print(f\"New price: {price/2}\")\n",
     "\n",
     "cart_list = [5, 20, 8]\n",
-    "halve_prices(cart_list)        \n",
-    "\n"
+    "halve_prices(cart_list)"
    ]
   },
   {
