--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -561,6 +561,15 @@
       "253\n",
       "\n",
       "{'chave1': 1230, 'chave2': [22, 453, 100.0], 'chave3': ['mamão', 'banana', 'abacaxi']}\n",
+      "\n",
+      "A long-expected party\n",
+      "The shadow of the past\n",
+      "Three is company\n",
+      "\n",
+      "A long-expected party\n",
+      "The shadow of the past\n",
+      "Three is awesome\n",
+      "A new value\n",
       "\n",
       "dict aninhado em python\n"
      ]
@@ -586,6 +595,20 @@
     "# Duas operações no mesmo comando, para atualizar um item dentro da lista\n",
     "dict1['chave2'][2] += 26.6 # faz a operação e depois atribui com o '='\n",
     "print(dict1)\n",
+    "print()\n",
+    "\n",
+    "# Imprimindo os valores das chaves de um dicionário\n",
+    "contents = {\"ch. 1\": \"A long-expected party\", \"ch. 2\": \"The shadow of the past\", \"ch. 3\": \"Three is company\"}\n",
+    "for chapter in contents:\n",
+    "    print(contents[chapter])\n",
+    "print()\n",
+    "\n",
+    "# Alterando o valor de uma chave ou criando uma nova chave\n",
+    "contents = {\"ch. 1\": \"A long-expected party\", \"ch. 2\": \"The shadow of the past\", \"ch. 3\": \"Three is company\"}\n",
+    "contents[\"ch. 3\"] = \"Three is awesome\"\n",
+    "contents[\"ch. 4\"] = \"A new value\"\n",
+    "for chapter in contents:\n",
+    "    print(contents[chapter])    \n",
     "print()\n",
     "\n",
     "# Criando dicionários aninhados\n",
