--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,8 @@
     "listaConvertida.append(55)\n",
     "tupla3 = tuple(listaConvertida)\n",
     "print(listaConvertida)\n",
-    "print(tupla3)"
+    "print(tupla3)\n",
+    "print()"
    ]
   },
   {
