--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,8 @@
     "nome_1 = 45\n",
     "nome_2 = 45\n",
     "\n",
-    "print(nome_1 + nome_2 + 10)"
+    "print(nome_1 + nome_2 + 10)\n",
+    "print()"
    ]
   }
  ],
