--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1114,6 +1114,23 @@
     "print(nome_1 + nome_2 + 10)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Olá')"
+   ]
   }
  ],
  "metadata": {
